chore: Add Room and SQLite dependencies with KSP support

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+# for room
+kotlin.native.disableCompilerDaemon=true
